// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Component enters editing mode when edit action is pressed 1`] = `
<View
  testID="mock-swipeable"
>
  <View
    done={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(33, 104, 105, 1)",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "minHeight": 50,
        "paddingBottom": 5,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 5,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoFocus={true}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        rejectResponderTermination={true}
        returnKeyType="done"
        style={
          Array [
            Object {
              "color": "#ffffff",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "fontSize": 14,
              "fontWeight": "400",
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
        testID="task-edit-input"
        underlineColorAndroid="transparent"
        value="Test Task"
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginTop": 2,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#9cc5a1",
              "borderColor": "#9cc5a1",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginRight": 4,
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 6,
              "paddingRight": 6,
              "paddingTop": 2,
            }
          }
          testID="priority-edit-button-none"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontSize": 8,
                  "fontWeight": "700",
                },
              ]
            }
          >
            Nenhuma
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#4a90e2",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginRight": 4,
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 6,
              "paddingRight": 6,
              "paddingTop": 2,
            }
          }
          testID="priority-edit-button-low"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#4a90e2",
                  "fontSize": 8,
                  "fontWeight": "700",
                },
              ]
            }
          >
            Baixa
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#f5a623",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginRight": 4,
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 6,
              "paddingRight": 6,
              "paddingTop": 2,
            }
          }
          testID="priority-edit-button-medium"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#f5a623",
                  "fontSize": 8,
                  "fontWeight": "700",
                },
              ]
            }
          >
            Média
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#FF0000",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginRight": 4,
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 6,
              "paddingRight": 6,
              "paddingTop": 2,
            }
          }
          testID="priority-edit-button-high"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FF0000",
                  "fontSize": 8,
                  "fontWeight": "700",
                },
              ]
            }
          >
            Alta
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Icon
        color="#FF0000"
        name="x"
        onPress={[Function]}
        size={20}
        style={
          Array [
            Object {
              "marginRight": 10,
            },
          ]
        }
        testID="cancel-edit-button"
      />
      <Icon
        color="#ffffff"
        name="check"
        onPress={[Function]}
        size={20}
        testID="save-edit-button"
      />
    </View>
  </View>
</View>
`;

exports[`Task Component renders correctly for a completed task 1`] = `
<View
  testID="mock-swipeable"
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#49a078",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "minHeight": 50,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "opacity": "interpolate-mock",
          "paddingBottom": 0,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 0,
          "transform": Array [
            Object {
              "scale": "interpolate-mock",
            },
          ],
        }
      }
    >
      <Icon
        color="#ffffff"
        name="rotate-ccw"
        size={20}
      />
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "700",
            "marginLeft": 8,
          }
        }
      >
        Desfazer
      </Text>
    </View>
  </View>
  <View
    done={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(73, 160, 120, 1)",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "minHeight": 50,
        "paddingBottom": 5,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 5,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#9cc5a1",
            "borderRadius": 2,
            "height": 20,
            "marginRight": 8,
            "width": 4,
          },
        ]
      }
    />
    <Text
      done={true}
      style={
        Array [
          Object {
            "color": "#9cc5a1",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 14,
            "fontWeight": "400",
            "textDecorationLine": "line-through",
          },
        ]
      }
    >
      Test Task
    </Text>
    <Icon
      color="#9cc5a1"
      name="check-circle"
      size={20}
    />
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#9cc5a1",
          "justifyContent": "center",
          "minHeight": 50,
          "opacity": 1,
        }
      }
      testID="edit-action"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "opacity": "interpolate-mock",
            "paddingBottom": 0,
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingTop": 0,
            "transform": Array [
              Object {
                "scale": "interpolate-mock",
              },
            ],
          }
        }
      >
        <Icon
          color="#ffffff"
          name="edit-2"
          size={20}
        />
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "700",
              "marginLeft": 8,
            }
          }
        >
          Editar
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#FF0000",
          "justifyContent": "center",
          "minHeight": 50,
          "opacity": 1,
        }
      }
      testID="delete-action"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "opacity": "interpolate-mock",
            "paddingBottom": 0,
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingTop": 0,
            "transform": Array [
              Object {
                "scale": "interpolate-mock",
              },
            ],
          }
        }
      >
        <Icon
          color="#ffffff"
          name="trash"
          size={20}
        />
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "700",
              "marginLeft": 8,
            }
          }
        >
          Excluir
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Task Component renders correctly for a pending task 1`] = `
<View
  testID="mock-swipeable"
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#49a078",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "minHeight": 50,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "opacity": "interpolate-mock",
          "paddingBottom": 0,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 0,
          "transform": Array [
            Object {
              "scale": "interpolate-mock",
            },
          ],
        }
      }
    >
      <Icon
        color="#ffffff"
        name="check"
        size={20}
      />
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "700",
            "marginLeft": 8,
          }
        }
      >
        Concluir
      </Text>
    </View>
  </View>
  <View
    done={false}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(33, 104, 105, 1)",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "minHeight": 50,
        "paddingBottom": 5,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 5,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#9cc5a1",
            "borderRadius": 2,
            "height": 20,
            "marginRight": 8,
            "width": 4,
          },
        ]
      }
    />
    <Text
      done={false}
      style={
        Array [
          Object {
            "color": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 14,
            "fontWeight": "400",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      Test Task
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#9cc5a1",
          "justifyContent": "center",
          "minHeight": 50,
          "opacity": 1,
        }
      }
      testID="edit-action"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "opacity": "interpolate-mock",
            "paddingBottom": 0,
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingTop": 0,
            "transform": Array [
              Object {
                "scale": "interpolate-mock",
              },
            ],
          }
        }
      >
        <Icon
          color="#ffffff"
          name="edit-2"
          size={20}
        />
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "700",
              "marginLeft": 8,
            }
          }
        >
          Editar
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#FF0000",
          "justifyContent": "center",
          "minHeight": 50,
          "opacity": 1,
        }
      }
      testID="delete-action"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "opacity": "interpolate-mock",
            "paddingBottom": 0,
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingTop": 0,
            "transform": Array [
              Object {
                "scale": "interpolate-mock",
              },
            ],
          }
        }
      >
        <Icon
          color="#ffffff"
          name="trash"
          size={20}
        />
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "700",
              "marginLeft": 8,
            }
          }
        >
          Excluir
        </Text>
      </View>
    </View>
  </View>
</View>
`;
